--- a/yaml/dev/kustomization.yaml
+++ b/yaml/dev/kustomization.yaml
@@ -4,5 +4,5 @@ resources:
 - deployment.yaml
 images:
 - name: the-my-app
-  newName: 472496548172.dkr.ecr.us-east-2.amazonaws.com/ecr-new-repo
-  newTag: "306"
+  newName: 472496548172.dkr.ecr.us-east-2.amazonaws.com/gitlab-argo-aws
+  newTag: "20240130"
